Shaders now load from resources dir when program is ran from jar, and stencil buffer now actually works (clears properly & corrected format)